[package]
name = "tunnel"
version = "0.1.0"
authors = ["Anicka Burova <anicka.burova@gmail.com>"]
description = "Tunnel over various methods"

[dependencies]
aws-sdk-rust = "*"
rust-ini = "0.9"

bytes = "0.4"
futures = "0.1"
tokio-io = "0.1"
tokio-core = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"

clap = "2"
log = "0.3"
log4rs = "0.7"
